# iCalendar

./: .gitignore  LICENSE  README.md  config.json.example  pyproject.toml  test_calendar_manager_integration.py
mcp_ical/: caldav_client.py  config.py  ical.py  models.py  server.py
